# app

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc.cjs  .sqllsrc.json  DEVELOPMENT.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  rsw.toml  rustfmt.toml  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  cookies.json  index.worker.js  sqlx-data.json  tauri-dev.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.toml
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-02506ad41cc94cd937422ef1977a97174431f008a9fb4ce39667d587a858b876.json  query-05dca7fe15ab1bf03952e94498ef3130e16f752da72782783696eb2cca4736d5.json  query-06aaf8f4a17566f1d25da2a60f0baf4b5fc28c3cf0c001a84e25edf9eab3c7e3.json  query-07b0c398efd1d5f8f479652de658716a9e7faef6aba6583dd209a4f290c5edd1.json  query-07d1a1c7b4f3d9625a766e60fd57bb779b71dae30e5bbce34885a911a5a42428.json  query-086be00a35cef34e170b8b818bd3c1c4c0b6a9cc4dc1597c49ef6fc1931618f4.json  query-09a8074f7ef8d734607f95391819e38f822488933905dcc7a7788bd184bc7796.json  query-0d9e685f878fc2a0e1803c6aaae3828deebd684fc9f78e9f8595a550f90749fe.json  query-0fa6b56f8c996d14908a56928674b4b35af5fa36f63dc48b9b66ee6dfde78976.json  query-11394af12419cca3be3a26dff9275514ea2a44504e3c7a568a9578c64b5713d1.json  query-12b265491d1ebba19e1ce8a660e458ffbcd8c0850aef16ba1f70e358623ac66a.json  query-13cb883199e81966174e6fda9c252bf7213fe01b5346266c0a89dc0ac89eda64.json  query-1428d25b6aa3d6ec55742a968571fa951da0406d7bb32408883c584eae7dd53c.json  query-14930955e8a914e292dfbebfce2ea43cc41c1d517386ed816c16d436bf626bf3.json  query-1517b0f86c841b5f1247bd40c3a9b38ab001d846a410b6e3cd36f9e844d50ddb.json  query-1821c2f60b9fa4514d58eb73b23e25ad683b80b9bd0c2944063190a0d0a19ee5.json  query-18ada3bb42c29f1940ab2e61961d79cdd69210f3dc2076aedcadeba8e34dcb6e.json  query-196ed792c8d96425d428cb9609b0c1b18e8f1ba3c1fdfb38c91ffd7bada97f59.json  query-198bd086ccc87d2e6c24cb1c717f486d3ab58c0c958ede850c018fc266eade87.json  query-1ad8a2581417acb2d1b06fc2727a452230ff4ecbdfb5be54a034ec7c4fb1cabe.json  query-1ca8044e7eebe465e740623d4b5491e9fedc0e24a7bd3cc78ef8de795fdaef01.json  query-20cf0f8b71e600bc40ee204b60a12b2f3728178f3b8788d2e5cc92821b74d470.json  query-20d6b878bb8d16bde3e78e22cf801b5b191905d867091bb54a210256a0145a17.json  query-21cf14623d646b0d96ba92392edc4d48dff601d04acee62d2a0c12b8e655787b.json  query-24a721700844cb0ea9c2585c4df796ec10188b559063a9093e432ae993154f31.json  query-26072725d536c3cfdffd9a681d17c0ee2f246ca98e0459630a2430236d3bbdd2.json  query-294cbe19f9ddd9519ace3558df4308948082ec0ce7096855aa7d8fba519b8b4f.json  query-29d3bee45c4fca4c63231e1205edc708818737fe37137dbba6af2d784c3c0221.json  query-2c181a4dc13efc52fe6a5a68291c5678a9624020df4ea744e78396f6926d5c88.json  query-2c9658a639c5e4994ae9c8ec30bd4e40a1945d640962991f879928619950ef62.json  query-3330be44d8851f8e3456c403b5d1067f4e70e85ef8829b7aaad5b1993c3d01e8.json  query-35c9607291ee400e7696393bec7f4aa254a2dd163c4f79ea368ac6ee5f74c365.json  query-38e8fd3b0959623322bf49cf6682a4ddeac667cf6e71b97bc7e122848ad1565f.json  query-3b3fb6271340c6ec21a10b4f1b20502c86c425e0b53ac07692f8a4ed0be09335.json  query-3c52c0fa3372cdd2657a775c3b93fb65f42d3226cec27220469558e14973328c.json  query-3d199d371be948211f4a50c869b307f5df60784293c52397d77a187633a406dd.json  query-3dce053aef78e831db2369f3c49e891cb8a9e1ba6e7a60fe9e24292a3f97dca3.json  query-3e8651cca7feecc208a676dfd24c7d8775040d5287c16890056dcb474674edfb.json  query-41e59811f6f497fa62e1b08dc1f67488541ce526d2395c271dde931286bb7e83.json  query-42bc0ded60b44dab19daf6d8fc7df83d83af5d88ea0b84514fdc877a668c27cd.json  (+90 more)
src-tauri/capabilities/: capabilities.json  main.json
src-tauri/grpc/: Cargo.toml
src-tauri/grpc/src/: lib.rs  (+3 more)
src-tauri/icons/: icon.afdesign  icon.icns
src-tauri/macos/: entitlements.plist
src-tauri/migrations/: 20230225181302_init.sql  20230301163450_add-response-error.sql  20230314160400_add-body-type.sql  20230316052652_key-values.sql  20230316062901_model-fields.sql  20230319042610_sort-priority.sql  20230329000257_updated-by.sql  20230330143214_request-auth.sql  20230413232435_response-body-blob.sql  20231022205109_environments.sql  20231028161007_variables.sql  20231103004111_workspace-variables.sql  20231103142807_folders.sql  20231112180500_body_object.sql  20231113183810_url_params.sql  20231122055216_remove_body.sql  20240111221224_settings.sql  20240115193751_workspace_settings.sql  20240118181105_channel_setting.sql  20240127013915_cookies.sql  20240128230717_more_response_attrs.sql  20240203164833_grpc.sql  20240206191206_grpc-protos.sql  20240218071057_grpc-authentication.sql  20240522031045_theme-settings.sql  20240529143147_more-settings.sql  20240607151115_open-workspace-setting.sql  20240814013812_fix-env-model.sql  20240826184943_disable-telemetry.sql  20240829131004_plugins.sql  20240919211340_sync-objects.sql  20240919211340_sync.sql  20241003134208_response-state.sql  20241012181547_proxy-setting.sql
src-tauri/models/: Cargo.toml
src-tauri/plugin_runtime/: Cargo.toml
src-tauri/plugins/: hello-world.js  plugin.ts
src-tauri/src/: analytics.rs  commands.rs  deno.rs  deno_ops.rs  export_resources.rs  grpc.rs  http.rs  http_request.rs  lib.rs  mac.rs  main.rs  menu.rs  models.rs  notifications.rs  plugin.rs  plugins.rs  render.rs  runtime.js  runtime.rs  runtime.ts  send.rs  tauri_plugin_mac_window.rs  tauri_plugin_traffic_light.rs  tauri_plugin_windows_window.rs  template_callback.rs  template_fns.rs  updates.rs  win.rs  window_ext.rs  window_menu.rs
src-tauri/tauri-plugin-plugin-runtime/: Cargo.toml  build.rs
src-tauri/tauri-plugin-sync/: Cargo.toml  build.rs  index.ts  package.json
src-tauri/templates/: Cargo.toml
src-tauri/yaak_grpc/: Cargo.toml
src-tauri/yaak_models/: Cargo.toml  index.ts  package.json
src-tauri/yaak_plugin_runtime/: Cargo.toml  build.rs  index.ts  package.json
src-tauri/yaak_sse/: Cargo.toml  index.ts  package.json
src-tauri/yaak_sync/: Cargo.toml  index.ts  package.json
(+729 files in other folders)
