[package]
name = "plugin_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
tauri = { version = "2.0.0-beta" }
reqwest = { version = "0.12.5", features = ["stream"] }
anyhow = "1.0.86"
flate2 = "1.0.30"
zip = "2.1.3"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.113"

[target.'cfg(unix)'.dependencies]
flate2 = "1.0.28"
tar = "0.4.40"

[target.'cfg(windows)'.dependencies]
zip = "2.1.3"

[build-dependencies]
tonic-build = "0.11"
