[package]
name = "plugin_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
log = "0.4.21"
prost = "0.12"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["stream"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.113"
tauri = { version = "2.0.0-beta" }
tauri-plugin-shell = "2.0.0-beta"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"
