[package]
name = "tauri-plugin-sync"
links = "tauri-plugin-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
yaak_models = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rusqlite = { workspace = true, features = ["bundled", "chrono"] }
sea-query = { workspace = true, features = ["with-chrono", "attr"] }
sea-query-rusqlite = { workspace = true, features = ["with-chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
sha1 = "0.10.6"
hex = "0.4.3"
base64 = "0.22.1"
log = "0.4.22"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.12", features = ["build"] }
