[package]
name = "yaak_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
dunce = "1.0.4"
hyper = { version = "1.4.1" }
hyper-proxy2 = { version = "0.1.0" }
hyper-rustls = { version = "0.27.3", features = ["http2", "rustls-native-certs"] }
hyper-util = { version = "0.1.9" }
log = "0.4.20"
md5 = "0.7.0"
prost = "0.13.3"
prost-reflect = { version = "0.14.2", features = ["serde", "derive"] }
prost-types = "0.13.3"
rustls = { version = "0.23.12" , features = ["ring"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.113"
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = "0.1.14"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
uuid = { version = "1.7.0", features = ["v4"] }
