[package]
name = "yaak_plugin_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
command-group = "5.0.1"
dunce = "1.0.4"
log = "0.4.21"
prost = "0.13.1"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["stream"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.113"
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
tonic = "0.12.1"
ts-rs = "9.0.1"
thiserror = "1.0.63"
yaak_models = {workspace = true}
regex = "1.10.6"
path-slash = "0.2.1"

[build-dependencies]
tonic-build = "0.12.1"
